<resources>
    <string name="app_name">Bio</string>
    <string name="name">bob hope</string>
    <string name="my_bio"><u><i>Lorem ipsum</i></u> dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nec ullamcorper sit amet risus nullam eget felis eget nunc. Accumsan tortor posuere ac ut consequat semper viverra nam. Gravida rutrum quisque non tellus orci ac auctor augue mauris. Mauris augue neque gravida in fermentum. In egestas erat imperdiet sed euismod nisi porta lorem. Malesuada nunc vel risus commodo viverra maecenas accumsan lacus vel. Mi quis hendrerit dolor magna eget est lorem. Eget mauris pharetra et ultrices. Ac turpis egestas sed tempus urna et pharetra. Mattis vulputate enim nulla aliquet porttitor lacus luctus accumsan tortor. Nunc mattis enim ut tellus elementum sagittis vitae. Nisl vel pretium lectus quam id leo. Lacinia quis vel eros donec. Massa sed elementum tempus egestas sed sed.\n\nAliquam vestibulum morbi blandit cursus risus at ultrices. Morbi leo urna molestie at. Auctor augue mauris augue neque gravida in fermentum et. Mollis aliquam ut porttitor leo a. Montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada. Lectus mauris ultrices eros in cursus. Mi ipsum faucibus vitae aliquet. Dignissim enim sit amet venenatis urna cursus. Accumsan lacus vel facilisis volutpat est velit egestas dui. A pellentesque sit amet porttitor. Non odio euismod lacinia at quis risus.\n\nTincidunt praesent semper feugiat nibh sed pulvinar proin gravida hendrerit. Vel risus commodo viverra maecenas accumsan lacus vel facilisis. Fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis. Ut ornare lectus sit amet. Lectus sit amet est placerat in. Nullam vehicula ipsum a arcu cursus vitae. Ornare arcu dui vivamus arcu felis bibendum ut. Arcu risus quis varius quam quisque id diam. Mi sit amet mauris commodo quis imperdiet massa. Ut tellus elementum sagittis vitae et leo duis ut diam. Pellentesque massa placerat duis ultricies lacus sed. Sed cras ornare arcu dui vivamus arcu felis bibendum ut. Vestibulum lorem sed risus ultricies tristique nulla aliquet enim. Sed vulputate mi sit amet mauris commodo quis imperdiet. Dignissim sodales ut eu sem integer vitae justo eget magna. Quis lectus nulla at volutpat diam ut. Viverra vitae congue eu consequat ac felis. Sit amet nisl suscipit adipiscing bibendum est ultricies. Tortor dignissim convallis aenean et tortor at risus viverra. Cras fermentum odio eu feugiat pretium nibh ipsum consequat nisl.\n\nMaecenas pharetra convallis posuere morbi leo urna molestie. Pulvinar mattis nunc sed blandit libero. Morbi tristique senectus et netus et malesuada fames ac. Laoreet id donec ultrices tincidunt arcu non sodales. Sit amet volutpat consequat mauris nunc congue. Nisl suscipit adipiscing bibendum est ultricies integer. Amet nisl suscipit adipiscing bibendum est ultricies integer. Sed elementum tempus egestas sed. Neque egestas congue quisque egestas diam in arcu cursus. Morbi quis commodo odio aenean sed adipiscing diam. Ipsum nunc aliquet bibendum enim facilisis. Habitant morbi tristique senectus et netus et malesuada fames ac. Arcu odio ut sem nulla pharetra. Netus et malesuada fames ac turpis egestas maecenas. Sed felis eget velit aliquet sagittis id consectetur purus ut. Hendrerit gravida rutrum quisque non. Nec nam aliquam sem et. Pulvinar sapien et ligula ullamcorper malesuada.\n\nNunc lobortis mattis aliquam faucibus purus in massa. Arcu dictum varius duis at consectetur lorem donec massa sapien. At tellus at urna condimentum mattis. Ornare arcu odio ut sem nulla. Amet mauris commodo quis imperdiet massa tincidunt. Mattis nunc sed blandit libero volutpat sed cras. Hendrerit dolor magna eget est lorem ipsum dolor. Varius vel pharetra vel turpis. Vivamus arcu felis bibendum ut tristique et egestas. Sed risus pretium quam vulputate dignissim suspendisse in. Nec ultrices dui sapien eget mi proin sed libero enim.</string>
    <string name="hobby_hint">enter your hobbies</string>
    <string name="done">Done</string>
    <string name="img_description">android robot</string>
    <string name="auto_fill_hints">classical guitar</string>
</resources>