<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
    <data>
        <variable
            name="bio"
            type="com.example.bio.data.Bio" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CA4E4E"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/img_description"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textView"
            style="@style/nameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@{bio.name}" />

        <EditText
            android:id="@+id/enter_hobbies"
            style="@style/generalStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="@string/auto_fill_hints"
            android:ems="10"
            android:hint="@string/hobby_hint"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/done_button"
            style="@style/generalStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/done" />

        <TextView
            android:id="@+id/hobbies_text"
            style="@style/generalStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{bio.hobbies}"
            android:visibility="gone" />

        <ScrollView
            style="@style/nameStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                style="@style/generalStyles"
                android:fontFamily="@font/roboto_slab_thin"
                android:text="@string/my_bio" />
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>